--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "symfony/mailer": "^5.3|^6.0",
+        "php": ">=8.0.2",
+        "symfony/mailer": "^6.0",
         "ext-fileinfo": "*"
     },
     "require-dev": {
