--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,11 @@
 {
     "name": "yzh52521/think-mail",
-    "description": "A powerful and beautiful php mailer for All of ThinkPHP and Other PHP Frameworks based SwiftMailer",
+    "description": "A powerful and beautiful php mailer for All of ThinkPHP and Other PHP Frameworks based symfony",
     "keywords": [
-        "think-mailer",
+        "think-mail",
         "mailer",
-        "phpmailer",
-        "swiftmailer",
+        "symfony",
         "mail",
-        "thinkphp",
-        "thinkphp5",
         "thinkphp6"
     ],
     "type": "library",
@@ -20,8 +17,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "swiftmailer/swiftmailer": "^5.0"
+        "php": ">=8.0.2",
+        "symfony/mailer": "^6.0",
+        "ext-fileinfo": "*"
+    },
+    "require-dev": {
+        "topthink/framework": "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,9 +34,6 @@
             "config": {
                 "mailer": "src/config/config.php"
             }
-        },
-        "think-config": {
-            "mailer": "src/config/config.php"
         }
     }
 }
