--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-fileinfo": "*"
     },
     "require-dev": {
-        "topthink/framework": "^6.0"
+        "topthink/framework": ">=6.0"
     },
     "autoload": {
         "psr-4": {
